augmented graph implementation

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -19,6 +19,7 @@
         android:layout_height="50dp"
         android:text="implement graph"
         android:layout_weight="1"
-        android:layout_gravity="center_horizontal|bottom" />
+        android:layout_gravity="center_horizontal|bottom"
+        android:onClick="implementDijkstraOnClick" />
 
 </FrameLayout>
